--- a/problems/problem3/problem3.html
+++ b/problems/problem3/problem3.html
@@ -14,7 +14,11 @@
         <div class="container">
             <div class="box">Box1</div>
             <div class="box">Box2</div>
-            <div class="box">Box3</div>
+            <div class="box">Box3
+                <div class="little">
+                    
+                </div>
+            </div>
             <div class="box">Box4</div>
             <div class="box">Box5</div>
             <div class="box">Box6</div>
